--- a/src/BaGet/appsettings.json
+++ b/src/BaGet/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ApiKey": "",
+  "ApiKey": "hexie-exam-nuget-20240510",
   "PackageDeletionBehavior": "Unlist",
   "AllowPackageOverwrites": false,
 
