--- a/src/BaGet/BaGet.csproj
+++ b/src/BaGet/BaGet.csproj
@@ -1,8 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\pub-linux-x64.pubxml" />
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\pub-win-x64.pubxml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.5.0" />
@@ -13,7 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\BaGet.Aliyun\BaGet.Aliyun.csproj" />
     <ProjectReference Include="..\BaGet.Aws\BaGet.Aws.csproj" />
-    <ProjectReference Include="..\BaGet.Azure\BaGet.Azure.csproj" />
     <ProjectReference Include="..\BaGet.Core\BaGet.Core.csproj" />
     <ProjectReference Include="..\BaGet.Database.MySql\BaGet.Database.MySql.csproj" />
     <ProjectReference Include="..\BaGet.Database.PostgreSql\BaGet.Database.PostgreSql.csproj" />
