添加了一些与服务相关的

--- a/src/BaGet/appsettings.json
+++ b/src/BaGet/appsettings.json
@@ -1,5 +1,6 @@
 {
-  "ApiKey": "hexie-exam-nuget-20240510",
+  "ApiKey": "hexie-exam-zhyj-20240520",
+  "PathBase": "/nuget",
   "PackageDeletionBehavior": "Unlist",
   "AllowPackageOverwrites": false,
 
